<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    tools:context=".MainActivityDisplay">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="0dp"
        android:padding="0dp"
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/spring"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/movie_banner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/textView_title_d"
                style="@style/textView"
                android:paddingVertical="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/textView_popularity_d"
                style="@style/textView"
                android:paddingVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_title_d"
                tools:text="Popularity:" />

            <TextView
                android:id="@+id/textView_overview_title"
                style="@style/textView"
                android:paddingVertical="8dp"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_popularity_d" />

            <TextView
                android:id="@+id/textView_overview_d"
                style="@style/textView"
                android:paddingVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_overview_title"
                tools:text="This is description of overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/black"
            android:text="@string/add_to_watch_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_layout_inner"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:clickable="false"
        app:layout_anchor="@id/imageView"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@android:drawable/presence_video_online" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>